# cocoa-way

./: Cargo.toml  README.md  run_waypipe.sh
.github/workflows/: release.yml
Formula/: cocoa-way.rb
scripts/: bundle-macos-app.sh
src/: connections.rs  container_sessions.rs  layout.rs  main.rs  menu_bar.rs  messages.rs  metal_renderer.rs  render.rs  runtime_paths.rs  state.rs
