[package]
name = "cocoa-way"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-only"
default-run = "cocoa-way"


[dependencies]
smithay = { path = "vendor/smithay", default-features = false, features = ["wayland_frontend"] }
winit = { version = "0.29", default-features = false, features = ["rwh_06"] }
raw-window-handle = "0.6"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
core-graphics = "0.23"
core-text = "20"
core-foundation = "0.9"
core-foundation-sys = "0.8"
objc2 = { version = "0.5.2", default-features = false, features = ["std"] }
objc2-foundation = { version = "0.2.2", default-features = false, features = ["std", "NSString"] }
objc2-metal = { version = "0.2.2", default-features = false, features = [
    "std", "MTLDevice", "MTLCommandQueue", "MTLCommandBuffer",
    "MTLCommandEncoder", "MTLLibrary", "MTLRenderPipeline",
    "MTLRenderCommandEncoder", "MTLTexture", "MTLPixelFormat",
    "MTLDrawable", "MTLRenderPass", "MTLTypes",
] }
objc2-app-kit = { version = "0.2.2", default-features = false, features = [
    "NSApplication", "NSMenu", "NSMenuItem", "NSResponder",
    "NSWindow", "NSAlert", "NSView",
    "NSControl", "NSText", "NSTextField", "NSSecureTextField",
    "NSPasteboard",
    "NSCursor",
] }
objc2-quartz-core = { version = "0.2.2", default-features = false, features = [
    "std", "CAMetalLayer", "CALayer", "objc2-metal",
] }
log = "0.4"
env_logger = "0.10"
utils = { package = "calloop", version = "0.12" }
memmap2 = "0.9"
libc = "0.2"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
wayland-client = { version = "0.31", default-features = false }
tempfile = "3.8"

[build-dependencies]
pkg-config = "0.3"

[workspace]
members = [
    "test-client"
]
